--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
 * {
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 body {
@@ -33,7 +34,7 @@ a {
     color: #fff !important;
     font-size: 18px;
     padding: 12px 0;
-    display: inline-block;
+    display: block;
     text-align: center;
     box-shadow: 0px 0px 5px 1px rgba(113, 119, 241, 0.5);
     border-radius: 8px;
@@ -58,7 +59,59 @@ a {
     content: url(../img/svg/logo-light.svg);
 }
 
+@keyframes rotate {
+    0% {
+        transform: rotate(0) scale(1.3);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes jump{
+    0% {
+        transform: translateY(-50%);
+    }
+    100%{
+        transform: translateY(0%);
+    }
+}
+
 /* header start */
+.header__nav {
+    position: relative;
+}
+
+.header__nav::before {
+    content: '';
+    position: absolute;
+    width: 3.5vw;
+    height: 3.7vw;
+    left: 243.95px;
+    top: 32px;
+    border: 0.3vw solid #790FF1;
+    box-sizing: border-box;
+    border-radius: 50%;
+    z-index: -1;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+    animation: rotate 2s linear infinite alternate;
+}
+
+.header__nav::after {
+    content: '';
+    position: absolute;
+    width: 4vw;
+    height: 4vw;
+    left: 73.66px;
+    top: 92.64px;
+
+    border: 0.3vw solid #9297EF;
+    box-sizing: border-box;
+    transform: matrix(0.71, 0.71, -0.7, 0.71, 0, 0);
+    z-index: -1;
+    animation: rotate 2s linear infinite alternate;
+}
+
 
 .header__link {
     color: var(--primary-color);
@@ -77,10 +130,12 @@ a {
     padding: 0;
     transition: .4s;
 }
-.header__menu:focus{
+
+.header__menu:focus {
     box-shadow: unset;
 }
-.header__menu.collapsed{
+
+.header__menu.collapsed {
     background: var(--txt-color);
 }
 
@@ -99,61 +154,102 @@ a {
 .header__menu::after {
     top: 10px;
 }
-.header__menu:not(.collapsed):before{
+
+.header__menu:not(.collapsed):before {
     transform: rotate(45deg);
     top: 0;
 }
-.header__menu:not(.collapsed)::after{
+
+.header__menu:not(.collapsed)::after {
     transform: rotate(-45deg);
     top: 0;
 }
-.header__content-subtitle{
+
+.header__content {
+    position: relative;
+}
+
+.header__content::before {
+    content: '';
+    position: absolute;
+    width: 5vw;
+    height: 5vw;
+    top: 5%;
+    right: 5%;
+    border: 0.3vw solid #9297EF;
+    z-index: -1;
+    animation: rotate 2s linear infinite alternate;
+}
+
+.header__content::after {
+    content: '';
+    position: absolute;
+    width: 4vw;
+    height: 4vw;
+    top: 60%;
+    right: 15%;
+    border: 0.3vw solid #7177F1;
+    z-index: -1;
+    animation: rotate 2s linear infinite alternate;
+}
+
+.header__content-subtitle {
     font-size: 24px;
     font-weight: 600;
     color: var(--txt-color);
     margin-bottom: 10px;
     text-transform: capitalize;
 }
-.header__content-title{
+
+.header__content-title {
     margin-bottom: 25px;
 }
-.header__content-btn{
+
+.header__content-btn {
     max-width: 300px;
     width: 100%;
     line-height: unset;
     display: block;
     margin: 0 auto 50px;
 }
-.header__tech-card{
+
+.header__tech-card {
     display: grid;
     place-items: center;
     row-gap: 15px;
 }
-.header__tech-name{
+
+.header__tech-name {
     font-size: 20px;
     font-weight: 900;
     color: var(--primary-color);
     text-transform: uppercase;
 }
-.header__tech-card:first-of-type .header__tech-brand{
+
+.header__tech-card:first-of-type .header__tech-brand {
     color: #F1662A;
 }
-.header__tech-card:nth-of-type(2) .header__tech-brand{
+
+.header__tech-card:nth-of-type(2) .header__tech-brand {
     color: #1572B6;
 }
-.header__tech-card:nth-of-type(3) .header__tech-brand{
+
+.header__tech-card:nth-of-type(3) .header__tech-brand {
     color: #790FF1;
 }
-.header__carousel-indicators{
+
+.header__carousel-indicators {
     position: static;
     margin: 50px 0 0;
     order: 1;
     column-gap: 20px;
 }
-.header__carousel-img{
+
+.header__carousel-img {
     max-height: 500px;
 }
-.header__carousel-dot{
+
+.header__carousel-dot {
     width: 15px !important;
     height: 14px !important;
     border-radius: 50%;
@@ -161,9 +257,208 @@ a {
     border: 0 !important;
     opacity: unset !important;
     margin: 0 !important;
-    
+
 }
-.header__carousel-dot.active{
+
+.header__carousel-dot.active {
     background: var(--dots-color-active) !important;
 }
+
 /* header end */
+/* main start */
+.about {
+    padding: 70px 0 80px;
+    position: relative;
+}
+
+.about::before {
+    content: url(../img/svg/figure_1.svg);
+    position: absolute;
+    top: -60%;
+    right: 0;
+    z-index: -1;
+
+}
+
+.about__work {
+    text-transform: uppercase;
+    padding: 24px 20px;
+    position: relative;
+    transform: translateY(100%);
+}
+
+.about__work-span {
+    width: 40px;
+    height: 40px;
+    font-weight: 700;
+    font-style: italic;
+    background: #0fdac2;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    position: absolute;
+    top: -14px;
+    right: -14px;
+}
+
+.about__desc {
+    padding: 30px;
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+    border-radius: 8px;
+    background: var(--body);
+}
+
+/* capabilities start */
+.capabilities {
+    padding-bottom: 85px;
+}
+
+.accordion {
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.accordion__button {
+    font-weight: 900;
+    font-size: 18px;
+    color: #fff;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    text-transform: uppercase;
+    padding: 15px 30px;
+    background: var(--primary-color);
+    column-gap: 20px;
+    transition: .4s ea;
+    position: relative;
+
+}
+
+.accordion__button.collapsed::after {
+    content: '';
+    position: absolute;
+    width: 95%;
+    height: 1px;
+    background: #ddd;
+    bottom: 0;
+}
+
+.accordion__item:last-of-type .accordion__button.collapsed::after {
+    display: none;
+}
+
+.accordion__button.collapsed {
+    color: var(--primary-color);
+    background: var(--body);
+}
+
+.accordion__body {
+    padding: 25px 30px;
+    font-size: 18px;
+    line-height: 150%;
+    color: #fff;
+    background: var(--primary-color);
+}
+
+.accordion__item:first-of-type .accordion__button.collapsed .accordion__brand {
+    color: #e44f26;
+}
+
+.accordion__item:first-of-type(2) .accordion__button.collapsed .accordion__brand {
+    color: #1572B6;
+}
+
+.accordion__icon-down {
+    transform: rotate(180deg);
+    transition: 0.2s;
+    font-size: 25px;
+}
+
+.accordion__button.collapsed .accordion__icon-down {
+    transform: rotate(0);
+}
+
+.capabilities__row {
+    position: relative;
+}
+
+.capabilities__row::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3vw;
+    height: 3vw;
+    border-radius: 50%;
+    border: 0.3vw solid #9297EF;
+    z-index: -1;
+    animation: jump .7s cubic-bezier(1,0.165, 0.82, 0.75) infinite alternate;
+}
+.capabilities__row::after{
+    content: '';
+    position: absolute;
+    top: 20%;
+    right: 0;
+    width: 4.5vw;
+    height: 4.5vw;
+    border: 0.3vw solid #9297EF;
+    z-index: -1;
+    animation: jump 1s cubic-bezier(1,0.165, 0.82, 0.75) infinite alternate-reverse;
+}
+/* works start  */
+.works{
+    padding-bottom: 120px;
+}
+.works__title {
+    margin-bottom: 30px;
+}
+.works__tab{
+    background-color: var(--body);
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+border-radius: 8px;
+padding: 20px;
+}
+.works__tab-img{
+    object-fit: cover;
+    border-radius: 8px;
+    min-height: 320px;
+    max-height: 320px;
+    object-position: top;
+}
+.works__tab-title{
+    font-weight: 600;
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: var(--primary-color);
+}
+.works__tab-txt{
+    font-size: 18px;
+    line-height: 150%;
+    color: var(--txt-color);
+    margin-bottom: 20px;
+}
+.works__tab-btn {
+    line-height: unset;
+    font-weight: 600;
+}
+.works__list{
+    border-radius: 8px;
+}
+.works__list-link{
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--primary-color);
+    box-shadow: 0px 0px 5px 3px rgb(113, 119, 241, 0.15);
+    background: var(--body);
+    padding: 16.6px;
+    border: 0;
+}
+.works__list-link.active{
+    background: var(--primary-color);
+    color: var(--body);
+}
+/* works end */
