--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
     :root {
         --body: #151437;
         --txt-color: #fff;
@@ -11,9 +11,18 @@
         content: url(../img/svg/logo-dark.svg);
     }
 }
-
+@media(max-width: 1440px){
+    .about::before{
+        display: none;
+    }
+}
 @media (max-width: 768px) {
     .title {
         font-size: calc(28px + (12 + 12 * 0.7) * (100vw - 320px) / 1920);
+    }
+}
+@media (max-width: 576px){
+    .about__img-photo{
+        width: 100%;
     }
 }
