--- a/css/main.css
+++ b/css/main.css
@@ -68,11 +68,13 @@ a {
         transform: rotate(360deg);
     }
 }
-@keyframes jump{
+
+@keyframes jump {
     0% {
         transform: translateY(-50%);
     }
-    100%{
+
+    100% {
         transform: translateY(0%);
     }
 }
@@ -395,9 +397,10 @@ a {
     border-radius: 50%;
     border: 0.3vw solid #9297EF;
     z-index: -1;
-    animation: jump .7s cubic-bezier(1,0.165, 0.82, 0.75) infinite alternate;
+    animation: jump .7s cubic-bezier(1, 0.165, 0.82, 0.75) infinite alternate;
 }
-.capabilities__row::after{
+
+.capabilities__row::after {
     content: '';
     position: absolute;
     top: 20%;
@@ -406,48 +409,57 @@ a {
     height: 4.5vw;
     border: 0.3vw solid #9297EF;
     z-index: -1;
-    animation: jump 1s cubic-bezier(1,0.165, 0.82, 0.75) infinite alternate-reverse;
+    animation: jump 1s cubic-bezier(1, 0.165, 0.82, 0.75) infinite alternate-reverse;
 }
+
 /* works start  */
-.works{
+.works {
     padding-bottom: 120px;
 }
+
 .works__title {
     margin-bottom: 30px;
 }
-.works__tab{
+
+.works__tab {
     background-color: var(--body);
     box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
-border-radius: 8px;
-padding: 20px;
+    border-radius: 8px;
+    padding: 20px;
 }
-.works__tab-img{
+
+.works__tab-img {
     object-fit: cover;
     border-radius: 8px;
     min-height: 320px;
     max-height: 320px;
     object-position: top;
 }
-.works__tab-title{
+
+.works__tab-title {
     font-weight: 600;
     font-size: 24px;
     margin-bottom: 20px;
     color: var(--primary-color);
 }
-.works__tab-txt{
+
+.works__tab-txt {
     font-size: 18px;
     line-height: 150%;
     color: var(--txt-color);
     margin-bottom: 20px;
 }
+
 .works__tab-btn {
     line-height: unset;
     font-weight: 600;
 }
-.works__list{
+
+.works__list {
     border-radius: 8px;
 }
-.works__list-link{
+
+.works__list-link {
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 600;
@@ -457,8 +469,38 @@ padding: 20px;
     padding: 16.6px;
     border: 0;
 }
-.works__list-link.active{
+
+.works__list-link.active {
     background: var(--primary-color);
     color: var(--body);
 }
+
+.list-group-items+.list-group-item.active {
+    margin: 0;
+    border: 0;
+}
+
 /* works end */
+/* footer__start */
+.footer__box {
+    column-gap: 30px;
+    margin: 30px 0 15px
+}
+
+.footer__boxx {
+    column-gap: 30px;
+}
+.footer__box-link{
+    font-size: 24px;
+    color: var(--footer-link-color);
+    border-bottom: 1px solid transparent;
+    transition: .4s;
+}
+.footer__box-link:hover{
+    border-bottom-color: var(--footer-link-color);
+    color: var(--footer-link-color);
+}
+.footer{
+    padding-bottom: 60px;
+}
+/* footer end */
