--- a/css/media.css
+++ b/css/media.css
@@ -16,6 +16,11 @@
         display: none;
     }
 }
+@media(max-width: 1200px){
+    .works__tab-img{
+        margin-bottom: 20px;
+    }
+}
 @media (max-width: 768px) {
     .title {
         font-size: calc(28px + (12 + 12 * 0.7) * (100vw - 320px) / 1920);
